@@ -3,8 +3,11 @@
 if( ! defined( 'WP_UNINSTALL_PLUGIN' ) )
 exit ();
 
-// Delete option from options table
-wprss_remove_caps();
+// Remove capabilities
+if ( function_exists( wprss_remove_caps() )
+	wprss_remove_caps();
+
+// Delete option from options table	
 delete_option( 'wprss_options' );
 delete_option( 'wprss_settings' );
 delete_option( 'wprss_settings_general' );
