@@ -2,6 +2,7 @@
 New feature: Added exclude parameter to shortcode
 Enhanced: Added metabox links to documentation and add-ons
 Fixed bug: Custom feed linking to post on user site rather than original source
+Fixed bug: Better function handling on uninstall, should remove uninstall issues
 
 3.3.1 (2013-08-09)
 Fixed bug: Roles and Capabilities file had not been included
